added shading and minor bug fixes.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                         <p class="label">RGB:</p>
                         <input type="checkbox" value="false" id="rgb">
                     </div>
+                    <div id="shadeContainer">
+                        <p class="label">Shade:</p>
+                        <input type="checkbox" value="false" id="shade">
+                    </div>
                 </div>
                 <div id="pixSlider">
                     <div id="resContainer">
@@ -39,6 +43,9 @@
                         <p id="resVal" class="label"></p>
                     </div>
                     <input type="range" min="9" max="81" value="9" step="9" class="slider" id="resolution">
+                </div>
+                <div>
+                    <button id="resetBtn" class="label">Reset</button>
                 </div>
                 <div class="knob">
                     <div class="knobCenter"></div>
